syntax = "proto3";

package Protocol;

// 공통 응답 메시지 구조
message S2C_Metadata 
{
  uint32 responseCode = 1;   // 응답 코드 (성공: 0, 실패: 에러 코드)
  int64 timestamp = 2;       // 메시지 생성 타임스탬프 (Unix 타임스탬프)
}

//유저 정보 응답 메시지
message L2C_Init 
{
  S2C_Metadata meta = 1; // 공통 메타 데이터 (응답 코드, 타임스탬프, 시퀀스)
  string userId = 2;             // 유저 ID (UUID, 16바이트)
}

//에러 응답 메시지
message S2C_Error 
{
  S2C_Metadata meta = 1; // 공통 메타 데이터 (응답 코드, 타임스탬프, 시퀀스)
  string message = 2; //에러 내용
}